--- a/app/javascript/pages/Game/Game.module.css
+++ b/app/javascript/pages/Game/Game.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     animation: fade 0.5s linear, shrink 0.5s ease-out;
+    -webkit-animation: fade 0.5s linear, shrink 0.5s ease-out;
 }
 
 @media screen and (min-width:1024px) {
@@ -20,6 +21,26 @@
 }
 
 @keyframes shrink {
+    0% {
+        overflow: hidden;
+        transform: scale(3);
+    }
+    100% {
+        transform: scale(1);
+        overflow: hidden;
+    }
+}
+
+@-webkit-keyframes fade {
+    0% {
+        opacity: 0
+    }
+    100% {
+        opacity: 1
+    }
+}
+
+@-webkit-keyframes shrink {
     0% {
         overflow: hidden;
         transform: scale(3);
